🔧 add list search
